force-app/main/default/objects/Hiring_Manager__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <inlineHelpText>Please provide the phone number</inlineHelpText>
    <label>Contact Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>