force-app/main/default/objects/Hiring_Manager__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <inlineHelpText>Provide the valid email id</inlineHelpText>
    <label>Email Id</label>
    <required>true</required>
    <type>Email</type>
</CustomField>